Fix scrollbar styling

--- a/src/styles/Asset.css
+++ b/src/styles/Asset.css
@@ -27,13 +27,13 @@
     padding: 0.1rem 0.4rem;
     bottom: 0;
     box-sizing: border-box;
+    border-top: 1px solid var(--sidebar-icon-inactive-color);
 }
 
 .asset-title {
     height: 2rem;
     overflow: hidden;
     text-overflow: ellipsis;
-    border-top: 1px solid var(--sidebar-icon-inactive-color);
     background-color: var(--editing-tools-bg-color);
     cursor: text;
 }
@@ -42,9 +42,13 @@
     height: 2rem;
     margin: 0;
     font-size: 1rem;
-    border: 0;
+    border-width: 1px 0 0;
     background-color: var(--sidebar-header-bg-color);
     color: var(--sidebar-icon-active-color);
+}
+
+.asset-rename:focus {
+    outline: none;
 }
 
 .asset-delete {
